--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,18 @@
 {
-  "headers": [
+  "version": 2,
+  "builds": {
+    "src": "index.json",
+    "use": "@vercel/node"
+  
+  },
+  "routes": [
     {
-      "source": "index.json",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-      ]
-    }
-  ]
+      "src": "/(.*)",
+      "dest": "index.js",
+      "methods": ["GET","POST","PUT","DELETE"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+  }
+ ]
 }
