--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,7 @@
   "routes":[
     {
       "src": "/api/(.*)",
-      "dest": "server.js",
-      "methods": "GET,HEAD,POST,PUT,PATCH,DELETE"
+      "dest": "server.js"
     }
   ]
 }
