--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,13 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["db.json"]
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes":[
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "index.js"
     }
   ]
 }
