--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "index.js", 
       "use": "@vercel/node"
     }
   ],
-  "routes":[
+  "routes": [
     {
       "src": "/(.*)",
       "dest": "index.js"
